# pycounts

./: CHANGELOG.md  README.md  from pycounts.py  pyproject.toml
src/pycounts/: pycounts.py
